--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,3 +1,4 @@
+/* Navbar Styling */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -6,103 +7,65 @@
   padding: 0.5rem 1.5rem;
 }
 
-.navbar-center-btns {
-  display: flex;
-  gap: 1rem;
-}
-
+/* Brand Styling */
 .nav-brand {
   color: whitesmoke;
-  text-decoration: none;
-  cursor: pointer;
   font-size: 1.5rem;
-}
+  cursor: default;
 
-.nav-items {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 3rem;
-  height: 3rem;
-  aspect-ratio: 1 / 1;
-  border-radius: 100px;
-  background-color: whitesmoke;
-  transition: width 0.3s ease;
-  overflow: hidden;
-  text-decoration: none;
-  color: black;
-}
-
-.nav-items:hover {
-  width: 6rem;
-  transition: width 0.3s ease, background-color 0.3s ease;
-}
-
-.nav-hide {
-  display: none;
-}
-
-.nav-items:hover .nav-hide {
-  display: inline;
-  margin-left: 0.3rem;
-}
-
-@keyframes smoothHide {
-  from {
-    max-width: 0%;
-  }
-  to {
-    max-width: 100%;
+  &:hover {
+    text-decoration: none;
+    color: whitesmoke;
   }
 }
 
-.nav-profile {
+/* Shop Cart Styling */
+.nav-shopcart {
   position: relative;
-  display: block;
-  float: right;
   font-size: 20px;
   cursor: pointer;
+
+  &:hover {
+    .dropdown {
+      display: block;
+    }
+  }
 }
 
-.nav-profile .dropdown {
+.nav-shopcart .dropdown {
   display: none;
   position: absolute;
   right: 0;
   background-color: #f1f1f1;
   width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  border: 1px solid #ccc;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
+  border: 1px solid #ccc;
+  z-index: 1;
+
+  .dropdown-items {
+    color: black;
+    padding: 12px 14px;
+    font-size: 14px;
+    text-decoration: none;
+    cursor: default;
+
+    span {
+      &:hover {
+        font-size: 18px;
+        color: red;
+        transition: color 0.3s ease-in, font-size 0.3s ease-in;
+      }
+    }
+  }
 }
 
-.nav-profile .dropdown .dropdown-items {
-  color: black;
-  padding: 12px 14px;
-  text-decoration: none;
-  display: block;
-  font-size: 14px;
-  cursor: default;
-}
-
-.nav-profile:hover .dropdown {
-  display: block;
-}
-
-.nav-profile .dropdown .dropdown-items span:hover {
-  font-size: 18px;
-  color: red;
-  transition-property: color, font-size;
-  transition: ease-in 0.3s;
-}
-
-.profile-logo{
+/* Shop Cart Icon */
+.shopcart-logo {
   color: #f1f1f1;
-  transition: 0.5s ease-in-out;
-}
+  transition: color 0.1s ease-in;
 
-.profile-logo:hover{
-  color: #333;
+  &:hover {
+    color: #333;
+  }
 }
