--- a/src/styles/Icons.css
+++ b/src/styles/Icons.css
@@ -1,6 +1,10 @@
 .icon-grid {
-    width: 300px;
-    height: 300px;
+    max-width: 300px; 
+    height: 300px; 
+    overflow-y: auto;
+    overflow-x: hidden; 
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .icon-container {
@@ -17,4 +21,23 @@
     margin-bottom: 0;
     font-size: 12px;
     text-align: center;
+}
+
+.icon-grid::-webkit-scrollbar {
+    width: 8px;
+    border-radius: 10px;
+}
+
+.icon-grid::-webkit-scrollbar-track {
+    background-color: #333;
+    border-radius: 10px;
+}
+
+.icon-grid::-webkit-scrollbar-thumb {
+    background: lightseagreen;
+    border-radius: 4px;
+}
+
+.icon-grid::-webkit-scrollbar-thumb:hover {
+    background: lightgreen;
 }
