fix: prettier code and refactored

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,17 @@
 body {
   margin: 0;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family:
+    'Inter',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10,11 +20,12 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:
+    source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-.icon-image, .badge-image {
+.icon-image,
+.badge-image {
   display: block;
   margin: 0 auto 8px auto;
   max-width: 60px;
@@ -23,6 +34,6 @@ code {
   width: 24px;
 }
 
-.myiconbutton:hover{
-  color: #E1D9D1 ;
+.myiconbutton:hover {
+  color: #e1d9d1;
 }
